Fixing Regression Bug where context menu doesn't appear on long press

Added a Setting to tell Blink whether or not to always show the
context menu on a long press.

BUG=616060

Review-Url: https://codereview.chromium.org/2024323002
Cr-Commit-Position: refs/heads/master@{#397203}

Former-commit-id: 9a4f551361bcc1ea8f801d44b16b2d086feef2df